<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>net.es.sense</groupId>
  <artifactId>sense-n-rm</artifactId>
  <version>0.1.0</version>
  <packaging>pom</packaging>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.1.8</version>
  </parent>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <java.version>17</java.version>
    <guava.version>32.1.1-jre</guava.version>
    <jersey.version>3.1.3</jersey.version>

    <host.key>${basedir}/target/dist/config/server.key</host.key>
    <host.cer>${basedir}/target/dist/config/server.cer</host.cer>
    <host.ca>${basedir}/target/dist/config/server.crt</host.ca>
  </properties>

  <modules>
    <module>common</module>
    <module>nsi-dds-lib</module>
    <module>nsi-cs-lib</module>
    <module>model</module>
    <module>driver</module>
    <module>measurements</module>
    <module>nsi-driver</module>
    <module>api</module>
    <module>rm</module>
  </modules>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.jena</groupId>
          <artifactId>jena-maven-tools</artifactId>
          <version>3.6.0</version>
        </plugin>
        <plugin>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-maven-plugin</artifactId>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>build-helper-maven-plugin</artifactId>
          <version>1.12</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-antrun-plugin</artifactId>
          <version>1.8</version>
          <inherited>false</inherited>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>exec-maven-plugin</artifactId>
          <version>3.0.0</version>
          <inherited>false</inherited>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-antrun-plugin</artifactId>
        <version>1.8</version>
        <inherited>false</inherited>
        <executions>
          <execution>
            <id>build-keystores</id>
            <phase>none</phase>
            <goals>
              <goal>run</goal>
            </goals>
            <configuration>
              <target>
                <exec executable="/bin/bash" failonerror="true">
                  <arg value="${basedir}/certificates/build_truststore.sh" />
                  <arg value="JKS" />
                  <arg value="${basedir}/target/dist/config/truststore.jks" />
                  <arg value="changeit" />
                  <arg value="${basedir}/certificates" />
                </exec>
                <exec executable="/bin/bash" failonerror="true">
                  <arg value="${basedir}/certificates/build_keystore.sh" />
                  <arg value="JKS" />
                  <arg value="${basedir}/target/dist/config/keystore.jks" />
                  <arg value="changeit" />
                  <arg value="${host.key}" />
                  <arg value="${host.cer}" />
                  <arg value="${host.ca}" />
                </exec>
              </target>
            </configuration>
          </execution>
          <execution>
            <id>package-runtime</id>
            <phase>none</phase>
            <goals>
              <goal>run</goal>
            </goals>
            <configuration>
              <target>
                <mkdir dir="${basedir}/target/dist/config"/>
                <copy todir="${basedir}/target/dist/config">
                  <fileset dir="${basedir}/config"/>
                </copy>
                <copy file="${basedir}/rm/target/rm-${project.version}.jar" tofile="${basedir}/target/dist/sense-n-rm.jar"/>
                <copy todir="${basedir}/target/dist">
                  <fileset dir="${basedir}/etc"/>
                </copy>
              </target>
            </configuration>
          </execution>
        </executions>
      </plugin>

    </plugins>
  </build>
</project>
